- fixed z-index fix - moved dom highlighter to own file and improved target

--- a/css/taskmanager.css
+++ b/css/taskmanager.css
@@ -4,6 +4,7 @@
     position: fixed;
     top: 100px;
     right: 0px;
+    z-index: 9999999;
 }
 
 .tasks {
